    STYLE-WARNING.
  * fixed bug 321: define-method-combination argument lambda lists do
    not cause invalid code to be generated when &optional or &aux
    variables have default values.  (reported by Bruno Haible)
  * fixed bug 327: system subclasses of STRUCTURE-OBJECT or CONDITION
    have CLOS classes; this appears also to have fixed reported
    instability in stack exhaustion detection.
  * optimization: rearranged the expansion of various defining macros
    so that each expands into only one top-level form in a
    :LOAD-TOPLEVEL context; this appears to decrease fasl sizes by
    approximately 10%.
  * optimization: used a previously little-used slot in symbols to
    cache SXHASH values, yielding a 5-10% compiler speedup.  (thanks
    to Juho Snellman)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** MAKE-INSTANCES-OBSOLETE returns the class name when called with 
       a symbol.
    ** Fixed an optimization bug related to inheritance of initforms
       from local to shared slots.
    ** FILE-POSITION works as specified on BROADCAST-STREAMs.
    ** CAST optimizer forgot to flush argument derived type.
    ** print/read consistency on floats is now orders of magnitude
       more likely.  (thanks also to Bruno Haible for a similar report
       and discussions)
    ** removed stack cleaning in the cleanup part of UNWIND-PROTECT.
    ** IMAGPART is specified (infelicitously) to return (* 0 <thing>)
       for objects of type REAL.  Make it so.
    ** SXHASH is specified (infelicitously) to respect similarity,
       which means that (SXHASH 0.0) must equal (SXHASH -0.0).  Make
       it so.  (thanks to Markus Ziegler)
    ** on the Alpha, the compiler succeeds in compiling functions
       returning a known number of arguments greater than 63.
    ** fixed handling of invalid NIL arguments in keyword position
       in local calls.
    ** fixed non-pretty printing of arrays with *PRINT-RADIX* being
       true.